styles.css
/* stylelint-disable @stylistic/selector-list-comma-newline-after */

.blog-header-logo {
  font-family: "Playfair Display", Georgia, "Times New Roman", serif/*rtl:Amiri, Georgia, "Times New Roman", serif*/;
  font-size: 2.25rem;
}

.blog-header-logo:hover {
  text-decoration: none;
}

/*
h1, h2, h3, h4, h5, h6 {
  font-family: "Playfair Display", Georgia, "Times New Roman", serif/*rtl:Amiri, Georgia, "Times New Roman", serif*/;
}*/

.flex-auto {
  flex: 0 0 auto;
}

.h-250 { height: 250px; }
@media (min-width: 768px) {
  .h-md-250 { height: 250px; }
}

/* Pagination */
.blog-pagination {
  margin-bottom: 4rem;
}

/*
 * Blog posts
 */
.blog-post {
  margin-bottom: 4rem;
}
.blog-post-meta {
  margin-bottom: 1.25rem;
  color: #727272;
}

/*---------Body-----------------*/
body{
  background-color: whitesmoke;
}

/*--------Resume container ------*/
.container{
  background-color: #fff;
}


/*-----------Fonts---------------------*/
/*
body,h1,h2,h3,h4,h5 {
    font-family: 'Roboto', sans-serif;
}*/

h2{
      line-height: 1.5;
}
h4{
  color: #5590c0;
}
h3{
  color: #5590c0;
}

/*---------------Profile Header---------*/
.profile-container{
  background-color: #0b4472;
}
.row {
    --bs-gutter-x: 1.5rem;
    --bs-gutter-y: 0;
    display: flex;
    flex-wrap: wrap;
    margin-top: calc(-1 * var(--bs-gutter-y));
    margin-right: calc(-.5 * var(--bs-gutter-x));
    margin-left: calc(-.5 * var(--bs-gutter-x));
}
/*----------Social Icons---------------*/


.btn-social {
    display: inline-block;
    width: 32px;
    height: 32px;
    color: #2196F3;
    border: 2px solid #fff;
    border-radius: 10%;
    text-align: center;
    font-size: 18px;
    line-height: 29px;
    margin-left: 0.5em;

}

.btn:focus,
.btn:active,
.btn.active {
    outline: 0;
}


.btn-outline {
    border: solid 3px #fff;
    font-size: 20px;
    color: #1565C0;
    background: #fff;
    transition: all .3s ease-in-out;
}

.btn-outline:hover,
.btn-outline:focus,
.btn-outline:active,
.btn-outline.active {
    border: solid 2px #fff;
    color: #2196F3;
    background: #fff;
}

/*-----------Section line divider--------*/
.resume-section-title {
    font-size: 1.25rem;
    position: relative;
}


.text-uppercase {
    text-transform: uppercase !important;
}
.pb-3 {
    padding-bottom: 1rem !important;
}
.mb-3 {
    margin-bottom: 1rem !important;
}
.resume-section-title:after {
    content: "";
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 1.5px;
    background: #89a4b2;
}
/*-------screen size---------*/
@media (max-width: 767.98px) {
    .profile-container .picture {
        width: 120px;
        border-radius: 4px;
    }
}
@media (max-width: 767.98px) {
    .profile-container {
    height: auto;
    padding: 5%;
  }
}

/*---------------Resume Timeline----------*/
.resume-timeline {
    padding-left: 2rem;
}


*, *::before, *::after {
    box-sizing: border-box;
}

div {
    display: block;
    unicode-bidi: isolate;
}

.resume-timeline:before {
    content: "";
    display: inline-block;
    width: 3px;
    height: 100%;
    background: #aab4c3;
    left: 6px;
    top: 4px;
    position: absolute;
}

.resume-timeline-item:before {
    content: "";
    display: inline-block;
    position: absolute;
    left: 1px;
    top: 3px;
    width: 15px;
    height: 15px;
    border: 4px solid #58677c;
    background: white;
    border-radius: 50%;
}

/*-------------------Resume Content----------------------*/


/*---
 color: #58677c;
 ---*/

.resume-company-name {
    margin-left: auto;
    font-size: 0.875rem;
    font-weight: 500;
}

@media (min-width: 1200px) {
    .resume-company-name {
        margin-left: auto;
    }
}

.resume-position-time {
    font-size: 0.875rem;
}

p{
    margin-top: 0;
    margin-bottom: 1rem;
}

.relevant-courses, li{
      font-size: 0.875rem;
}



.resume-major{
   font-weight: 600;
   margin-bottom:0;
   font-size: large;
}

/*----------WES Badge-------*/
.badge {
    display: inline-block;
    padding: .25em .4em;
    font-size: 75%;
    font-weight: 700;
    line-height: 1;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    border-radius: .25rem;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.badge-primary
 {
    color: #fff;
    background-color: #007bff;
}

.badge-pill {
    padding-right: .6em;
    padding-left: .6em;
    border-radius: 10rem;
}

